separated save node calls into different functions

--- a/test.ipynb
+++ b/test.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "firstClassMRate = (dfTitanic.loc[(dfTitanic[\"Survived\"] == 1) & (dfTitanic[\"Pclass\"] == 1) & (dfTitanic[\"Sex\"] == \"male\"), [\"Survived\"]].count() / dfTitanic.loc[(dfTitanic[\"Pclass\"] == 1) & (dfTitanic[\"Sex\"] == \"male\"), [\"Survived\"]].count())"
+    "list(merged.head())\n",
+    "list(merged.columns)"
    ]
   },
   {
@@ -35,8 +36,19 @@
     }
    ],
    "source": [
-    "str = 'firstClassMRate = (dfTitanic.loc[(dfTitanic[\"Survived\"] == 1) & (dfTitanic[\"Pclass\"] == 1) & (dfTitanic[\"Sex\"] == \"male\"), [\"Survived\"]].count() / dfTitanic.loc[(dfTitanic[\"Pclass\"] == 1) & (dfTitanic[\"Sex\"] == \"male\"), [\"Survived\"]].count())'\n",
-    "str[19:144]"
+    "# def preprocess(trips_in):\n",
+    "#   qc = np.all([\\\n",
+    "#              trips['pickup_longitude'] > -78, \\\n",
+    "#              trips['pickup_longitude'] < -70, \\\n",
+    "#              trips['dropoff_longitude'] > -78, \\\n",
+    "#              trips['dropoff_longitude'] < -70, \\\n",
+    "#              trips['pickup_latitude'] > 37, \\\n",
+    "#              trips['pickup_latitude'] < 45, \\\n",
+    "#              trips['dropoff_latitude'] > 37, \\\n",
+    "#              trips['dropoff_latitude'] < 45, \\\n",
+    "#              trips['passenger_count'] > 0,\n",
+    "#             ], axis=0)\n",
+    "#   return trips[qc]"
    ]
   }
  ],
