added more detail to save node

--- a/test.ipynb
+++ b/test.ipynb
@@ -15,8 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(merged.head())\n",
-    "list(merged.columns)"
+    "print(X_5K.shape, y_5K.shape)"
    ]
   },
   {
