added web links to csv

--- a/Results.ipynb
+++ b/Results.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "10352896-5b23-4a3c-b608-74dda71ac342",
    "metadata": {},
    "outputs": [
@@ -42,6 +42,7 @@
        "      <th></th>\n",
        "      <th>Unnamed: 0</th>\n",
        "      <th>notebook</th>\n",
+       "      <th>link</th>\n",
        "      <th>cell_id</th>\n",
        "      <th>lineno</th>\n",
        "      <th>end_lineno</th>\n",
@@ -59,6 +60,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>hmwk01.ipynb</td>\n",
+       "      <td>https://github.com/scuthbert/DataScience/blob/...</td>\n",
        "      <td>19</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -74,6 +76,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>hmwk01.ipynb</td>\n",
+       "      <td>https://github.com/scuthbert/DataScience/blob/...</td>\n",
        "      <td>19</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -89,6 +92,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>hmwk01.ipynb</td>\n",
+       "      <td>https://github.com/scuthbert/DataScience/blob/...</td>\n",
        "      <td>21</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -104,6 +108,7 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>hmwk01.ipynb</td>\n",
+       "      <td>https://github.com/scuthbert/DataScience/blob/...</td>\n",
        "      <td>21</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -119,6 +124,7 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>hmwk01.ipynb</td>\n",
+       "      <td>https://github.com/scuthbert/DataScience/blob/...</td>\n",
        "      <td>21</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
@@ -144,11 +150,13 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>816</th>\n",
        "      <td>816</td>\n",
        "      <td>Clustering.ipynb</td>\n",
+       "      <td>https://github.com/roei60/Data-Science-Hotels/...</td>\n",
        "      <td>16</td>\n",
        "      <td>9</td>\n",
        "      <td>9</td>\n",
@@ -164,6 +172,7 @@
        "      <th>817</th>\n",
        "      <td>817</td>\n",
        "      <td>Clustering.ipynb</td>\n",
+       "      <td>https://github.com/roei60/Data-Science-Hotels/...</td>\n",
        "      <td>16</td>\n",
        "      <td>10</td>\n",
        "      <td>10</td>\n",
@@ -179,6 +188,7 @@
        "      <th>818</th>\n",
        "      <td>818</td>\n",
        "      <td>Clustering.ipynb</td>\n",
+       "      <td>https://github.com/roei60/Data-Science-Hotels/...</td>\n",
        "      <td>16</td>\n",
        "      <td>11</td>\n",
        "      <td>11</td>\n",
@@ -194,6 +204,7 @@
        "      <th>819</th>\n",
        "      <td>819</td>\n",
        "      <td>Clustering.ipynb</td>\n",
+       "      <td>https://github.com/roei60/Data-Science-Hotels/...</td>\n",
        "      <td>16</td>\n",
        "      <td>13</td>\n",
        "      <td>13</td>\n",
@@ -209,6 +220,7 @@
        "      <th>820</th>\n",
        "      <td>820</td>\n",
        "      <td>Clustering.ipynb</td>\n",
+       "      <td>https://github.com/roei60/Data-Science-Hotels/...</td>\n",
        "      <td>16</td>\n",
        "      <td>14</td>\n",
        "      <td>14</td>\n",
@@ -222,53 +234,66 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>821 rows × 12 columns</p>\n",
+       "<p>821 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Unnamed: 0          notebook  cell_id  lineno  end_lineno  col_offset  \\\n",
-       "0             0      hmwk01.ipynb       19       1           1          12   \n",
-       "1             1      hmwk01.ipynb       19       1           1          12   \n",
-       "2             2      hmwk01.ipynb       21       1           1          18   \n",
-       "3             3      hmwk01.ipynb       21       1           1         114   \n",
-       "4             4      hmwk01.ipynb       21       2           2          19   \n",
-       "..          ...               ...      ...     ...         ...         ...   \n",
-       "816         816  Clustering.ipynb       16       9           9           0   \n",
-       "817         817  Clustering.ipynb       16      10          10           0   \n",
-       "818         818  Clustering.ipynb       16      11          11           0   \n",
-       "819         819  Clustering.ipynb       16      13          13           0   \n",
-       "820         820  Clustering.ipynb       16      14          14           0   \n",
+       "     Unnamed: 0          notebook  \\\n",
+       "0             0      hmwk01.ipynb   \n",
+       "1             1      hmwk01.ipynb   \n",
+       "2             2      hmwk01.ipynb   \n",
+       "3             3      hmwk01.ipynb   \n",
+       "4             4      hmwk01.ipynb   \n",
+       "..          ...               ...   \n",
+       "816         816  Clustering.ipynb   \n",
+       "817         817  Clustering.ipynb   \n",
+       "818         818  Clustering.ipynb   \n",
+       "819         819  Clustering.ipynb   \n",
+       "820         820  Clustering.ipynb   \n",
        "\n",
-       "     end_col_offset     type type_details output_type effect_type  \\\n",
-       "0                72    Call1       dropna    internal   enforcing   \n",
-       "1                79    Call1         copy    internal    checking   \n",
-       "2               111    Call1        count    internal    checking   \n",
-       "3               175    Call1        count    internal    checking   \n",
-       "4               112    Call1        count    internal    checking   \n",
-       "..              ...      ...          ...         ...         ...   \n",
-       "816              28  Assign2          NaN    internal   enforcing   \n",
-       "817              30  Assign1          NaN    internal    checking   \n",
-       "818              62    Call1  sort_values    internal   enforcing   \n",
-       "819              65  Assign2          NaN    internal   enforcing   \n",
-       "820               6    Expr1          NaN   revealing    checking   \n",
+       "                                                  link  cell_id  lineno  \\\n",
+       "0    https://github.com/scuthbert/DataScience/blob/...       19       1   \n",
+       "1    https://github.com/scuthbert/DataScience/blob/...       19       1   \n",
+       "2    https://github.com/scuthbert/DataScience/blob/...       21       1   \n",
+       "3    https://github.com/scuthbert/DataScience/blob/...       21       1   \n",
+       "4    https://github.com/scuthbert/DataScience/blob/...       21       2   \n",
+       "..                                                 ...      ...     ...   \n",
+       "816  https://github.com/roei60/Data-Science-Hotels/...       16       9   \n",
+       "817  https://github.com/roei60/Data-Science-Hotels/...       16      10   \n",
+       "818  https://github.com/roei60/Data-Science-Hotels/...       16      11   \n",
+       "819  https://github.com/roei60/Data-Science-Hotels/...       16      13   \n",
+       "820  https://github.com/roei60/Data-Science-Hotels/...       16      14   \n",
        "\n",
-       "                                                  code  \n",
-       "0    dfTiDirt.dropna(subset=[\"Survived\", \"Pclass\", ...  \n",
-       "1    dfTiDirt.dropna(subset=[\"Survived\", \"Pclass\", ...  \n",
-       "2    dfTitanic.loc[(dfTiDirt[\"Survived\"] == 1) & (d...  \n",
-       "3    dfTitanic.loc[dfTitanic[\"Pclass\"] == 1, [\"Surv...  \n",
-       "4    dfTitanic.loc[(dfTiDirt[\"Survived\"] == 1) & (d...  \n",
-       "..                                                 ...  \n",
-       "816                       hotels[\"cluster\"] = clusters  \n",
-       "817                     hotels = hotels[[0,\"cluster\"]]  \n",
-       "818  hotels.sort_values(by=[\"cluster\"],ascending=Tr...  \n",
-       "819  hotels[\"Count\"] = hotels.groupby(\"cluster\")[0]...  \n",
-       "820                                             hotels  \n",
+       "     end_lineno  col_offset  end_col_offset     type type_details output_type  \\\n",
+       "0             1          12              72    Call1       dropna    internal   \n",
+       "1             1          12              79    Call1         copy    internal   \n",
+       "2             1          18             111    Call1        count    internal   \n",
+       "3             1         114             175    Call1        count    internal   \n",
+       "4             2          19             112    Call1        count    internal   \n",
+       "..          ...         ...             ...      ...          ...         ...   \n",
+       "816           9           0              28  Assign2          NaN    internal   \n",
+       "817          10           0              30  Assign1          NaN    internal   \n",
+       "818          11           0              62    Call1  sort_values    internal   \n",
+       "819          13           0              65  Assign2          NaN    internal   \n",
+       "820          14           0               6    Expr1          NaN   revealing   \n",
        "\n",
-       "[821 rows x 12 columns]"
+       "    effect_type                                               code  \n",
+       "0     enforcing  dfTiDirt.dropna(subset=[\"Survived\", \"Pclass\", ...  \n",
+       "1      checking  dfTiDirt.dropna(subset=[\"Survived\", \"Pclass\", ...  \n",
+       "2      checking  dfTitanic.loc[(dfTiDirt[\"Survived\"] == 1) & (d...  \n",
+       "3      checking  dfTitanic.loc[dfTitanic[\"Pclass\"] == 1, [\"Surv...  \n",
+       "4      checking  dfTitanic.loc[(dfTiDirt[\"Survived\"] == 1) & (d...  \n",
+       "..          ...                                                ...  \n",
+       "816   enforcing                       hotels[\"cluster\"] = clusters  \n",
+       "817    checking                     hotels = hotels[[0,\"cluster\"]]  \n",
+       "818   enforcing  hotels.sort_values(by=[\"cluster\"],ascending=Tr...  \n",
+       "819   enforcing  hotels[\"Count\"] = hotels.groupby(\"cluster\")[0]...  \n",
+       "820    checking                                             hotels  \n",
+       "\n",
+       "[821 rows x 13 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
