added analysis of last lines in cells

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,52 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(X_5K.shape, y_5K.shape)"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'dfTitanic.loc[(dfTitanic[\"Survived\"] == 1) & (dfTitanic[\"Pclass\"] == 1) & (dfTitanic[\"Sex\"] == \"male\"), [\"Survived\"]].count()'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# def preprocess(trips_in):\n",
-    "#   qc = np.all([\\\n",
-    "#              trips['pickup_longitude'] > -78, \\\n",
-    "#              trips['pickup_longitude'] < -70, \\\n",
-    "#              trips['dropoff_longitude'] > -78, \\\n",
-    "#              trips['dropoff_longitude'] < -70, \\\n",
-    "#              trips['pickup_latitude'] > 37, \\\n",
-    "#              trips['pickup_latitude'] < 45, \\\n",
-    "#              trips['dropoff_latitude'] > 37, \\\n",
-    "#              trips['dropoff_latitude'] < 45, \\\n",
-    "#              trips['passenger_count'] > 0,\n",
-    "#             ], axis=0)\n",
-    "#   return trips[qc]"
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_season.shape"
    ]
   }
  ],
