restored notebook outputs

--- a/notebooks/NYSE-Data Analysis.ipynb
+++ b/notebooks/NYSE-Data Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:No traceback has been produced, nothing to debug.\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -28,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,27 +60,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>open</th>\n",
+       "      <th>close</th>\n",
+       "      <th>low</th>\n",
+       "      <th>high</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>354496</th>\n",
+       "      <td>2013-01-02</td>\n",
+       "      <td>FB</td>\n",
+       "      <td>27.440001</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>27.420000</td>\n",
+       "      <td>28.180000</td>\n",
+       "      <td>69846400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354979</th>\n",
+       "      <td>2013-01-03</td>\n",
+       "      <td>FB</td>\n",
+       "      <td>27.879999</td>\n",
+       "      <td>27.770000</td>\n",
+       "      <td>27.590000</td>\n",
+       "      <td>28.469999</td>\n",
+       "      <td>63140600.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>355462</th>\n",
+       "      <td>2013-01-04</td>\n",
+       "      <td>FB</td>\n",
+       "      <td>28.010000</td>\n",
+       "      <td>28.760000</td>\n",
+       "      <td>27.830000</td>\n",
+       "      <td>28.930000</td>\n",
+       "      <td>72715400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>355945</th>\n",
+       "      <td>2013-01-07</td>\n",
+       "      <td>FB</td>\n",
+       "      <td>28.690001</td>\n",
+       "      <td>29.420000</td>\n",
+       "      <td>28.650000</td>\n",
+       "      <td>29.790001</td>\n",
+       "      <td>83781800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356428</th>\n",
+       "      <td>2013-01-08</td>\n",
+       "      <td>FB</td>\n",
+       "      <td>29.510000</td>\n",
+       "      <td>29.059999</td>\n",
+       "      <td>28.860001</td>\n",
+       "      <td>29.600000</td>\n",
+       "      <td>45871300.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              date symbol       open      close        low       high  \\\n",
+       "354496  2013-01-02     FB  27.440001  28.000000  27.420000  28.180000   \n",
+       "354979  2013-01-03     FB  27.879999  27.770000  27.590000  28.469999   \n",
+       "355462  2013-01-04     FB  28.010000  28.760000  27.830000  28.930000   \n",
+       "355945  2013-01-07     FB  28.690001  29.420000  28.650000  29.790001   \n",
+       "356428  2013-01-08     FB  29.510000  29.059999  28.860001  29.600000   \n",
+       "\n",
+       "            volume  \n",
+       "354496  69846400.0  \n",
+       "354979  63140600.0  \n",
+       "355462  72715400.0  \n",
+       "355945  83781800.0  \n",
+       "356428  45871300.0  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data[data.symbol == \"FB\"].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['WLTW', 'A', 'AAL', 'AAP', 'AAPL', 'ABC', 'ABT', 'ACN', 'ADBE',\n",
+       "       'ADI', 'ADM', 'ADP', 'ADS', 'ADSK', 'AEE', 'AEP', 'AES', 'AET',\n",
+       "       'AFL', 'AGN', 'AIG', 'AIZ', 'AJG', 'AKAM', 'ALB', 'ALK', 'ALL',\n",
+       "       'ALXN', 'AMAT', 'AME', 'AMG', 'AMGN', 'AMP', 'AMT', 'AMZN', 'AN',\n",
+       "       'ANTM', 'AON', 'APA', 'APC', 'APD', 'APH', 'ARNC', 'ATVI', 'AVB',\n",
+       "       'AVGO', 'AVY', 'AWK', 'AXP', 'AYI'], dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.symbol.unique()[:50]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "501"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(data.symbol.unique())"
    ]
@@ -123,9 +264,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "High five! You successfully sent some data to your account on plotly. View your plot in your browser at https://plot.ly/~srjit/0 or inside your plot.ly account where it is named 'simple_ohlc'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~srjit/0.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Variation of AAPL Stock\n",
     "# Ref: https://plot.ly/python/ohlc-charts/\n",
@@ -196,9 +358,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~srjit/94.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -275,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,9 +460,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~srjit/6.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Ref: https://plot.ly/python/time-series/\n",
     "\n",
