folded in checking to revealing

--- a/test.ipynb
+++ b/test.ipynb
@@ -17,55 +17,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax.grid(alpha=0.25);"
+    "print(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "display(1)\n",
-    "print(4)\n",
-    "display(2)\n",
-    "3"
+    "print(test);"
    ]
   }
  ],
